--- a/community/src/main/resources/templates/board/view.html
+++ b/community/src/main/resources/templates/board/view.html
@@ -7,14 +7,34 @@
   <!-- CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 
+
   <!-- 테마 -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
 
   <!-- 자바스크립트 -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+
+  <style>
+    @import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
+    .starrating > label:before {
+      content: "\f005"; /* Star */
+      margin: 2px;
+      font-size: 8em;
+      font-family: FontAwesome;
+      color: #ffca08 ;
+    }
+
+    .starrating > input {display: none;}  /* Remove radio buttons */
+
+  </style>
 </head>
 <body>
 <div class="container-fluid">
+  <form action="/board/search" method="GET">
+    <input type="text" name = "keyword" placeholder="태그를 검색해주세요" >
+    <input type="hidden" name = "state" th:value="${state}" >
+    <button value="검색하기">검색하기</button>
+  </form>
   <div class="row">
     <div class="col-md-12">
       <div class="row">
@@ -25,10 +45,13 @@
               <h5 class="card-title">
                 <p th:text="${board.TITLE}"></p>
                 <p th:text="${board.BOARD_ID}"></p>
+                <p th:text="${board.RATING}"></p>
+                <th:block th:each="num: ${#numbers.sequence(1, board.RATING)}">
+                  <div class="starrating risingstar d-flex justify-content-center flex-row-reverse" style=" direction: rtl; display:inline-block;">
+                    <input type="radio" id="star5" name="rating" value="5" /><label for="star5" title="5 star" ></label>
+                  </div>
+                </th:block>
               </h5>
-<!--              <p class="card-text">-->
-<!--                Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.-->
-<!--              </p>-->
               <p>
                 <a class="btn btn-primary" th:href="@{/board/contentView/{BOARD_ID} (BOARD_ID=${board.BOARD_ID})}"> 보기</a>
                 <a class="btn btn-primary" th:href="@{/board/update/{BOARD_ID} (BOARD_ID=${board.BOARD_ID})}"> 수정</a>
