Working on layout and css
Working on layout and css

--- a/community/src/main/resources/templates/fragments/header.html
+++ b/community/src/main/resources/templates/fragments/header.html
@@ -6,7 +6,8 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>COMMUNITY</title>
-    <link rel="icon" type="image/x-icon" href="../../../webapp/static/assets/favicon.ico" />
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <link rel="icon" type="image/x-icon" href="../../../webapp/static/asset/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
