--- a/community/src/main/resources/templates/board/view.html
+++ b/community/src/main/resources/templates/board/view.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
-<html lang="UTF-8">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" >
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-  <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-  <!-- CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-
-
+  <header th:replace="fragments/config::configFragment"></header> <!--config 파일 -->
   <!-- 테마 -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
-
+<!--  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">-->
   <!-- 자바스크립트 -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
@@ -19,7 +14,7 @@
     .starrating > label:before {
       content: "\f005"; /* Star */
       margin: 2px;
-      font-size: 8em;
+      font-size: 2.5em;
       font-family: FontAwesome;
       color: #ffca08 ;
     }
@@ -28,40 +23,101 @@
 
   </style>
 </head>
+
 <body>
-<div class="container-fluid">
-  <form action="/board/search" method="GET">
-    <input type="text" name = "keyword" placeholder="태그를 검색해주세요" >
-    <input type="hidden" name = "state" th:value="${state}" >
-    <button value="검색하기">검색하기</button>
-  </form>
-  <div class="row">
-    <div class="col-md-12">
-      <div class="row">
-        <div class="col-md-4" th:each = "board:${boardList}">
-          <div class="card">
-            <img class="card-img-top" alt="Bootstrap Thumbnail Second" th:src= "@{https://community-pro.s3.ap-northeast-2.amazonaws.com/Community/{USER_ID}/{BOARD_ID}/{REPRE_IMAGE} (REPRE_IMAGE = ${board.REPRE_IMAGE}, USER_ID = ${board.USER_ID}, BOARD_ID = ${board.BOARD_ID})}" />
-            <div class="card-block">
-              <h5 class="card-title">
-                <p th:text="${board.TITLE}"></p>
-                <p th:text="${board.BOARD_ID}"></p>
-                <p th:text="${board.RATING}"></p>
-                <th:block th:each="num: ${#numbers.sequence(1, board.RATING)}">
-                  <div class="starrating risingstar d-flex justify-content-center flex-row-reverse" style=" direction: rtl; display:inline-block;">
-                    <input type="radio" id="star5" name="rating" value="5" /><label for="star5" title="5 star" ></label>
-                  </div>
-                </th:block>
-              </h5>
-              <p>
-                <a class="btn btn-primary" th:href="@{/board/contentView/{BOARD_ID} (BOARD_ID=${board.BOARD_ID})}"> 보기</a>
-                <a class="btn btn-primary" th:href="@{/board/update/{BOARD_ID} (BOARD_ID=${board.BOARD_ID})}"> 수정</a>
-              </p>
+<!-- ======= Mobile nav toggle button ======= -->
+<!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
+<i class="bi bi-list mobile-nav-toggle d-lg-none"></i>
+<!-- ======= Header ======= -->
+<header id="header" class="d-flex flex-column justify-content-center">
+  <nav id="navbar" class="navbar nav-menu">
+    <div th:replace="fragments/sidebar::sidebarFragment(${email})"> </div>
+  </nav><!-- .nav-menu -->
+</header><!-- End Header -->
+
+<!-- ======= Portfolio Section ======= -->
+<section id="portfolio" class="portfolio section-bg">
+  <div class="container" data-aos="fade-up">
+
+    <div class="section-title">
+      <h1>Blog</h1>
+      <h3>저장된 블로그</h3>
+    </div>
+    <form action="/board/search" method="GET" style="text-align: center;">
+      <input type="text" name = "keyword" placeholder="태그를 검색해주세요" >
+      <input type="hidden" name = "state" th:value="${state}" >
+      <button value="검색하기">검색하기</button>
+    </form>
+<!--    <div class="row">-->
+<!--      <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">-->
+<!--        <ul id="portfolio-flters">-->
+<!--          <li data-filter="*" class="filter-active">All</li>-->
+<!--          <li data-filter=".filter-app">App</li>-->
+<!--          <li data-filter=".filter-card">Card</li>-->
+<!--          <li data-filter=".filter-web">Web</li>-->
+<!--        </ul>-->
+<!--      </div>-->
+<!--    </div>-->
+
+    <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200" th:each = "board:${boardList}">
+      <div class="col-lg-4 col-md-6 portfolio-item filter-app" >
+        <div style= "display: flex;">
+        <th:block th:each="num: ${#numbers.sequence(1, board.RATING)}">
+          <div class="starrating risingstar" style=" direction: rtl; ">
+            <input type="radio" id="star5" name="rating" value="5" /><label for="star5" title="5 star" ></label>
+          </div>
+        </th:block>
+        </div>
+        <div class="portfolio-wrap">
+          <img src="../../static/assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+          <div class="portfolio-info">
+            <h4 th:text="${board.TITLE}"></h4>
+            <p>App</p>
+            <div class="portfolio-links">
+              <a href="../../static/assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+              <a th:href="@{/board/contentView/{BOARD_ID} (BOARD_ID=${board.BOARD_ID})}" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
         </div>
       </div>
-    </div>
+      </div>
+
   </div>
-</div>
+</section>
+
+<!--<div class="container-fluid">-->
+<!--  <form action="/board/search" method="GET">-->
+<!--    <input type="text" name = "keyword" placeholder="태그를 검색해주세요" >-->
+<!--    <input type="hidden" name = "state" th:value="${state}" >-->
+<!--    <button value="검색하기">검색하기</button>-->
+<!--  </form>-->
+<!--  <div class="row">-->
+<!--    <div class="col-md-12">-->
+<!--      <div class="row">-->
+<!--        <div class="col-md-4" th:each = "board:${boardList}">-->
+<!--          <div class="card">-->
+<!--            <img class="card-img-top" alt="Bootstrap Thumbnail Second" th:src= "@{https://community-pro.s3.ap-northeast-2.amazonaws.com/Community/{USER_ID}/{BOARD_ID}/{REPRE_IMAGE} (REPRE_IMAGE = ${board.REPRE_IMAGE}, USER_ID = ${board.USER_ID}, BOARD_ID = ${board.BOARD_ID})}" />-->
+<!--            <div class="card-block">-->
+<!--              <h5 class="card-title">-->
+<!--                <p th:text="${board.TITLE}"></p>-->
+<!--                <p th:text="${board.BOARD_ID}"></p>-->
+<!--                <p th:text="${board.RATING}"></p>-->
+<!--                <th:block th:each="num: ${#numbers.sequence(1, board.RATING)}">-->
+<!--                  <div class="starrating risingstar d-flex justify-content-center flex-row-reverse" style=" direction: rtl; display:inline-block;">-->
+<!--                    <input type="radio" id="star5" name="rating" value="5" /><label for="star5" title="5 star" ></label>-->
+<!--                  </div>-->
+<!--                </th:block>-->
+<!--              </h5>-->
+<!--              <p>-->
+<!--                <a class="btn btn-primary" th:href="@{/board/contentView/{BOARD_ID} (BOARD_ID=${board.BOARD_ID})}"> 보기</a>-->
+<!--                <a class="btn btn-primary" th:href="@{/board/update/{BOARD_ID} (BOARD_ID=${board.BOARD_ID})}"> 수정</a>-->
+<!--              </p>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
 </body>
 </html>
