--- a/community/src/main/resources/templates/fragments/config.html
+++ b/community/src/main/resources/templates/fragments/config.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="utf-8" xmlns:th="http://www.thymeleaf.org">
-
+<!-- head 태그 안에 삽입 -->
+<head>
 <th:block th:fragment="configFragment">
+  <!-- Jquery -->
+  <script src="http://code.jquery.com/jquery-latest.js"></script>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <!-- Favicons -->
+  <link href="../../static/assets/img/favicon.png" rel="icon">
+  <link href="../../static/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <!-- Vendor CSS Files -->
+  <link href="../../static/assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="../../static/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../../static/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="../../static/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="../../static/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="../../static/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
+  <!-- Template Main CSS File -->
+  <link href="../../static/assets/css/style.css" rel="stylesheet">
   <!--js
   <script th:src="@{}"> </script>
   -->
 </th:block>
+</head>
+<body></body>
 </html>
 
 
