--- a/community/src/main/resources/templates/user/mypage.html
+++ b/community/src/main/resources/templates/user/mypage.html
@@ -3,16 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <title>Mypage</title>
+
+    <header th:replace="fragments/config::configFragment"></header> <!--config 파일 -->
+
+    <link href="../../static/css/mypage.css" rel="stylesheet">
 </head>
+<!-- ======= Mobile nav toggle button ======= -->
+<!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
+<i class="bi bi-list mobile-nav-toggle d-lg-none"></i>
+<!-- ======= Header ======= -->
+<header id="header" class="d-flex flex-column justify-content-center">
+    <nav id="navbar" class="navbar nav-menu">
+        <div th:replace="fragments/sidebar::sidebarFragment(${user.USER_EMAIL})"> </div>
+    </nav><!-- .nav-menu -->
+</header><!-- End Header -->
 <body>
+<section id="about" class="about"  >
+    <div class="container" data-aos="fade-up">
+        <div class="section-title">
+            <h2>About</h2>
+            <p th:text="${user.USER_NAME}"></p>
+        </div>
+        <div class="row"> <!-- 로그인을 했을 경우 내 정보를 보여주자! -->
+            <div class="col-lg-4">
+                <div class="containers">
+                    <div class="avatar-upload">
+                        <div class="avatar-edit">
+                            <input type='file' id="imageUpload" accept=".png, .jpg, .jpeg" />
+                            <label for="imageUpload"></label>
+                        </div>
+                        <div class="avatar-preview">
+                            <div id="imagePreview" style="background-image: url(http://i.pravatar.cc/500?img=7);">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-<div class="col-md-4" th:each = "user:${user}">
-    <p th:text="${user.USER_NAME}"></p>
-    <p th:text="${user.USER_EMAIL}"></p>
-</div>
+            <div class="col-lg-8 pt-4 pt-lg-0 content">
+                <h3>UI/UX Designer &amp; Web Developer.</h3>
+                <p class="fst-italic">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                    magna aliqua.
+                </p>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <ul>
+                            <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
+                            <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                            <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
+                            <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-6">
+                        <ul>
+                            <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
+                            <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
+                            <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>email@example.com</span></li>
+                            <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <p>
+                    Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
+                    Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+                </p>
+            </div>
+        </div>
 
-<div class="col-md-4" th:each = "it:${it}">
-    <p th:text="${it}"></p>
-</div>
+    </div>
+</section><!-- End About Section -->
+
+
+<!--<div class="col-md-4" th:each = "it:${it}">-->
+<!--    <p th:text="${it}"></p>-->
+<!--</div>-->
 </body>
+<script src = "../../static/js/mypage.js"></script>
 </html>
