--- a/community/src/main/webapp/static/css/register.css
+++ b/community/src/main/webapp/static/css/register.css
@@ -11,7 +11,7 @@ body {
 }
 
 h1 {
-    color: #e91e63;
+    color: #0563bb;
     font-size: 48px;
     letter-spacing: -3px;
     text-align: center;
@@ -111,7 +111,7 @@ form .input__block input.repeat__password {
     transition: 0.2s linear;
 }
 form .signin__btn {
-    background: #e91e63;
+    background: #0563bb;
     color: white;
     display: block;
     width: 92.5%;
@@ -123,7 +123,7 @@ form .signin__btn {
     cursor: pointer;
     font-size: 17px;
     font-family: "Montserrat", sans-serif;
-    box-shadow: 0 15px 30px rgba(233, 30, 99, 0.36);
+    box-shadow: 0 15px 30px #0563bb96;
     transition: 0.2s linear;
 }
 form .signin__btn:hover {
