--- a/community/src/main/resources/templates/board/view.html
+++ b/community/src/main/resources/templates/board/view.html
@@ -2,6 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" >
 <head>
     <meta charset="UTF-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Title</title>
   <header th:replace="fragments/config::configFragment"></header> <!--config 파일 -->
   <!-- 테마 -->
@@ -21,6 +22,53 @@
 
     .starrating > input {display: none;}  /* Remove radio buttons */
 
+    a {
+      text-decoration: none;
+    }
+    .search-box{
+      position: absolute;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: #9fafbf;
+      margin-top : 40px;
+      border-radius: 40px;
+      padding: 10px;
+    }
+
+    .search-box > .search-txt {
+      width: 240px;
+      padding:0 6px;
+    }
+
+    .search-box > .search-btn {
+      background: white;
+      color: #1e1e1e;
+    }
+
+    .search-btn{
+      color:#d9d9d9;
+      float: right;
+      width: 40px; height: 40px;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transition: 0.4s;
+    }
+
+    .search-txt {
+      border : none;
+      background : none;
+      outline: none;
+      float: left;
+      padding: 0;
+      color: white;
+      font-size: 16px;
+      transition: 0.4s;
+      line-height: 40px;
+      width: 0px;
+    }
+
   </style>
 </head>
 
@@ -29,95 +77,67 @@
 <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
 <i class="bi bi-list mobile-nav-toggle d-lg-none"></i>
 <!-- ======= Header ======= -->
-<header id="header" class="d-flex flex-column justify-content-center">
+<header id="header" class="d-flex flex-column justify-content-center" >
   <nav id="navbar" class="navbar nav-menu">
     <div th:replace="fragments/sidebar::sidebarFragment(${email})"> </div>
   </nav><!-- .nav-menu -->
 </header><!-- End Header -->
 
 <!-- ======= Portfolio Section ======= -->
-<section id="portfolio" class="portfolio section-bg">
+<section id="portfolio" class="portfolio section-bg" style="margin: 60px;">
   <div class="container" data-aos="fade-up">
 
     <div class="section-title">
       <h1>Blog</h1>
-      <h3>저장된 블로그</h3>
+      <h3 th:if = "${state == 'true'}">저장된 블로그</h3>
+      <h3 th:if = "${state == 'false'}">임시 저장된 블로그</h3>
+      <form action="/board/search" method="GET" style="text-align: center;" class = "search-box">
+        <input type="text" name = "keyword" placeholder="태그를 검색해주세요" class="search-txt">
+        <input type="hidden" name = "state" th:value="${state}" >
+        <button value="검색하기" class="search-btn" ><i class="fas fa-search"></i></button>
+      </form>
     </div>
-    <form action="/board/search" method="GET" style="text-align: center;">
-      <input type="text" name = "keyword" placeholder="태그를 검색해주세요" >
-      <input type="hidden" name = "state" th:value="${state}" >
-      <button value="검색하기">검색하기</button>
-    </form>
-<!--    <div class="row">-->
-<!--      <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">-->
-<!--        <ul id="portfolio-flters">-->
-<!--          <li data-filter="*" class="filter-active">All</li>-->
-<!--          <li data-filter=".filter-app">App</li>-->
-<!--          <li data-filter=".filter-card">Card</li>-->
-<!--          <li data-filter=".filter-web">Web</li>-->
-<!--        </ul>-->
-<!--      </div>-->
-<!--    </div>-->
 
-    <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200" th:each = "board:${boardList}">
-      <div class="col-lg-4 col-md-6 portfolio-item filter-app" >
-        <div style= "display: flex;">
-        <th:block th:each="num: ${#numbers.sequence(1, board.RATING)}">
-          <div class="starrating risingstar" style=" direction: rtl; ">
-            <input type="radio" id="star5" name="rating" value="5" /><label for="star5" title="5 star" ></label>
-          </div>
-        </th:block>
+
+    <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200" style="margin-top: 60px;"  >
+      <div class="col-lg-4 col-md-6 portfolio-item filter-app" th:each = "board:${boardList}">
+        <div style= "display: flex; justify-content : center;">
+          <th:block th:each="num: ${#numbers.sequence(1, board.RATING)}">
+            <div class="starrating risingstar" style=" direction: rtl; ">
+              <input type="radio" id="star5" name="rating" value="5" /><label for="star5" title="5 star" ></label>
+            </div>
+          </th:block>
         </div>
         <div class="portfolio-wrap">
-          <img src="../../static/assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+          <img th:if = "${board.REPRE_IMAGE} != 'null'" th:src= "@{https://community-pro.s3.ap-northeast-2.amazonaws.com/Community/{USER_ID}/{BOARD_ID}/{REPRE_IMAGE} (REPRE_IMAGE = ${board.REPRE_IMAGE}, USER_ID = ${board.USER_ID}, BOARD_ID = ${board.BOARD_ID})}" class="img-fluid" alt="">
+          <img th:if = "${board.REPRE_IMAGE} == 'null'" src= "../../static/assets/img/noimage.png" class="img-fluid" alt="">
           <div class="portfolio-info">
             <h4 th:text="${board.TITLE}"></h4>
             <p>App</p>
             <div class="portfolio-links">
-              <a href="../../static/assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-              <a th:href="@{/board/contentView/{BOARD_ID} (BOARD_ID=${board.BOARD_ID})}" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              <a th:if = "${board.REPRE_IMAGE} != 'null'" th:href="@{https://community-pro.s3.ap-northeast-2.amazonaws.com/Community/{USER_ID}/{BOARD_ID}/{REPRE_IMAGE} (REPRE_IMAGE = ${board.REPRE_IMAGE}, USER_ID = ${board.USER_ID}, BOARD_ID = ${board.BOARD_ID})}" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+              <a th:if = "${board.REPRE_IMAGE} == 'null'" href="../../static/assets/img/noimage.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+              <a th:href="@{/board/contentView/{BOARD_ID} (BOARD_ID=${board.BOARD_ID})}" ><i class="bx bx-link"></i></a>
             </div>
           </div>
         </div>
       </div>
-      </div>
-
+  </div>
   </div>
 </section>
+<!-- Vendor JS Files -->
+<script src="../../static/assets/vendor/purecounter/purecounter_vanilla.js"></script>
+<script src="../../static/assets/vendor/aos/aos.js"></script>
+<script src="../../static/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="../../static/assets/vendor/glightbox/js/glightbox.min.js"></script>
+<script src="../../static/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+<script src="../../static/assets/vendor/swiper/swiper-bundle.min.js"></script>
+<script src="../../static/assets/vendor/typed.js/typed.min.js"></script>
+<script src="../../static/assets/vendor/waypoints/noframework.waypoints.js"></script>
+<script src="../../static/assets/vendor/php-email-form/validate.js"></script>
 
-<!--<div class="container-fluid">-->
-<!--  <form action="/board/search" method="GET">-->
-<!--    <input type="text" name = "keyword" placeholder="태그를 검색해주세요" >-->
-<!--    <input type="hidden" name = "state" th:value="${state}" >-->
-<!--    <button value="검색하기">검색하기</button>-->
-<!--  </form>-->
-<!--  <div class="row">-->
-<!--    <div class="col-md-12">-->
-<!--      <div class="row">-->
-<!--        <div class="col-md-4" th:each = "board:${boardList}">-->
-<!--          <div class="card">-->
-<!--            <img class="card-img-top" alt="Bootstrap Thumbnail Second" th:src= "@{https://community-pro.s3.ap-northeast-2.amazonaws.com/Community/{USER_ID}/{BOARD_ID}/{REPRE_IMAGE} (REPRE_IMAGE = ${board.REPRE_IMAGE}, USER_ID = ${board.USER_ID}, BOARD_ID = ${board.BOARD_ID})}" />-->
-<!--            <div class="card-block">-->
-<!--              <h5 class="card-title">-->
-<!--                <p th:text="${board.TITLE}"></p>-->
-<!--                <p th:text="${board.BOARD_ID}"></p>-->
-<!--                <p th:text="${board.RATING}"></p>-->
-<!--                <th:block th:each="num: ${#numbers.sequence(1, board.RATING)}">-->
-<!--                  <div class="starrating risingstar d-flex justify-content-center flex-row-reverse" style=" direction: rtl; display:inline-block;">-->
-<!--                    <input type="radio" id="star5" name="rating" value="5" /><label for="star5" title="5 star" ></label>-->
-<!--                  </div>-->
-<!--                </th:block>-->
-<!--              </h5>-->
-<!--              <p>-->
-<!--                <a class="btn btn-primary" th:href="@{/board/contentView/{BOARD_ID} (BOARD_ID=${board.BOARD_ID})}"> 보기</a>-->
-<!--                <a class="btn btn-primary" th:href="@{/board/update/{BOARD_ID} (BOARD_ID=${board.BOARD_ID})}"> 수정</a>-->
-<!--              </p>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</div>-->
+
+<!-- Template Main JS File -->
+<script src="../../static/assets/js/main.js"></script>
 </body>
 </html>
