--- a/community/src/main/resources/templates/fragments/sidebar.html
+++ b/community/src/main/resources/templates/fragments/sidebar.html
@@ -8,9 +8,9 @@
 <body>
 <ul>
     <li><a href="/" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-    <li th:if = "${email} ==null"><a href="/user/login" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-    <li th:if = "${email} !=null"><a href="/user/mypage" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-    <li th:if = "${email} ==null"><a href="#info" class="nav-link scrollto"><i class="bx bx-info-circle"></i> <span>Info</span></a></li> <!-- 사용 설명 첨부 할 예정 영상으로... -->
+    <li th:if = "${email} ==null"><a href="/user/login" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Login</span></a></li>
+<!--    <li th:if = "${email} !=null"><a href="/user/mypage" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>-->
+<!--    <li th:if = "${email} ==null"><a href="#info" class="nav-link scrollto"><i class="bx bx-info-circle"></i> <span>Info</span></a></li> &lt;!&ndash; 사용 설명 첨부 할 예정 영상으로... &ndash;&gt;-->
     <li th:if = "${email} !=null"><a href="/board/view/true" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Blog</span></a></li>
     <li th:if = "${email} !=null"><a href="/board/view/false" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Forest Saved Blog</span></a></li>
 <!--    <li th:if = "${email} !=null"><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>-->
