--- a/community/src/main/resources/templates/user/mypage.html
+++ b/community/src/main/resources/templates/user/mypage.html
@@ -29,8 +29,8 @@
                 <div class="containers">
                     <div class="avatar-upload">
                         <div class="avatar-edit">
-                            <input type='file' id="imageUpload" accept=".png, .jpg, .jpeg" />
-                            <label for="imageUpload"></label>
+                            <input type='file' id="files" accept=".png, .jpg, .jpeg" />
+                            <label for="files"></label>
                         </div>
                         <div class="avatar-preview">
                             <div id="imagePreview" style="background-image: url(http://i.pravatar.cc/500?img=7);">
