--- a/community/src/main/resources/templates/board/write.html
+++ b/community/src/main/resources/templates/board/write.html
@@ -27,8 +27,6 @@
             display: inline-block;
         }
 
-
-
         .starrating > label
         {
             color: #222222; /* Start color when not clicked */
@@ -43,21 +41,8 @@
         #TITLE
         { border-radius: 15px; }
 
-
-
         .input-file-container {
             width: 300px;
-        }
-
-        .input-file {
-            width: 300px;
-            height: 50px;
-            border: 1px solid #16858F;
-            display: flex;
-            flex-wrap: wrap;
-            position: relative;
-            border-radius: 8px;
-            overflow: hidden;
         }
 
         #files {
@@ -68,39 +53,11 @@
             top: 0;
             opacity: 0;
         }
-
-        .input-file__name {
-            width: 83%;
-            display: flex;
-            align-items: center;
-            font-size: 1.5em;
-            padding: 0 15px ;
-            margin: 0;
-            color: #16858F;
-        }
-
-        .input-file__button {
-            width: 17%;
-            font-size: 2em;
-            padding: 0;
-            border: none;
-            background-color: #10BAB9;
-            color: #ffffff;
-        }
         .input-file__button > label:before{
             content: "\f093"; /* Upload */
             margin: 2px;
             font-family: FontAwesome;
             display: inline-block;
-        }
-
-
-
-        .image-preview {
-            width: 70%;
-            display: block;
-            margin: 20px auto 0;
-            border-radius: 8px;
         }
     </style>
 </head>
@@ -121,9 +78,6 @@
     justify-content: center;">
 <div class="input-file-container" th:if="${content.CONTENT_HTML == null}" style="display: flex; margin-right: 100px;">
     <div>
-<!--        <input type="file"  id = "files"name = "files" multiple = "multiple" class="pre">-->
-<!--        <img src="https://i.ibb.co/0Jmshvb/no-image.png" class="image-preview" alt="preview image">-->
-
         <div class="containers">
             <div class="avatar-upload">
                 <div class="avatar-edit">
@@ -194,32 +148,15 @@
         </div>
     </label>
     <br>
-
-
-<!--&lt;!&ndash;    <input th:if="${content.CONTENT_HTML == null}" type="file" id = "files"name = "files" multiple = "multiple" class="pre">&ndash;&gt;-->
-<!--    <div class="input-file-container" th:if="${content.CONTENT_HTML == null}">-->
-<!--        <div class="input-file">-->
-<!--            <p class="input-file__name">Choose an image...</p>-->
-<!--            <button type="button" class="input-file__button">-->
-<!--&lt;!&ndash;              <i class="bx bx-upload"/>&ndash;&gt;-->
-<!--                <label for="star1" title="1 star"></label>-->
-<!--            </button>-->
-<!--            <input type="file"  id = "files"name = "files" multiple = "multiple" class="pre">-->
-<!--        </div>-->
-<!--        <img src="https://i.ibb.co/0Jmshvb/no-image.png" class="image-preview" alt="preview image">-->
-<!--    </div>-->
-<!--    <button type="button" id = "saveBtn">저장하기</button>-->
-
-<!--</form>-->
-
 <!--<button onclick="seeHtml()">html보기</button>-->
 <!--<button onclick="seeMd()">markdown보기</button>-->
 <script src="https://uicdn.toast.com/editor/latest/toastui-editor-all.min.js"></script>
 <script>
     $(function(){
-        let star_rating =$("#star-rating input[type=radio]:checked").val();
+
         $('#saveBtn').on('click', function(){
-            if (star_rating == "undefined"){
+            let star_rating =$("#star-rating input[type=radio]:checked").val();
+            if (star_rating == null){
                 alert("중요도를 선택해주세요");
             }else {
                 save("true");
@@ -227,14 +164,14 @@
         });
 
         $('#priBtn').on('click', function(){
-            if (star_rating == "undefined"){
+            let star_rating =$("#star-rating input[type=radio]:checked").val();
+            if (star_rating == null){
                 alert("중요도를 선택해주세요");
             }else {
                 save("false");
             }
         });
     });
-
 </script>
 
 <script src="../../static/js/tag.js"></script>
